# VoxPrimEditor

./: .gitignore  CMakeLists.txt  build.sh
res/shaders/: default_fragment.glsl  default_fragment_shader.glsl  default_vertex.glsl  default_vertex_shader.glsl  voxel_fragment_shader.glsl  voxel_vertex.glsl
src/: app.cpp  app.hpp  enum_utils.hpp  exception.hpp  input.cpp  input.hpp  input_utils.hpp  logger.hpp  main.cpp  resource_manager.cpp  resource_manager.hpp  typedefs.hpp
src/graphics/: camera.cpp  camera.hpp  color.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  opengl_utils.hpp  primitives.cpp  primitives.hpp  renderer.cpp  renderer.hpp  shaded_mesh.cpp  shaded_mesh.hpp  shader.cpp  shader.hpp  shader_pipeline.cpp  shader_pipeline.hpp  shader_pipeline.tpp  shader_pipeline_type.hpp  shader_utils.hpp  transform.cpp  transform.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.cpp  vertex_buffer_layout.hpp  voxel.cpp  voxel.hpp  voxel_transform.cpp  voxel_transform.hpp
